<resources>
    <string name="app_name">BDsqlLite</string>
    <string name="consultar">CONSULTAR LISTA DE USUARIO USANDO SPINNER</string>
    <string name="consultar_lista_listview">CONSULTAR LISTA DE USUARIO USANDO LISTVIEW</string>
    <string name="registro_de_usuario">REGISTRO DE USUARIO</string>
    <string name="id">ID</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="registrar_usuario">REGISTRAR USUARIO</string>
    <string name="selecciona_una_opci_n">Selecciona una opción</string>
</resources>